--- a/public/index.html
+++ b/public/index.html
@@ -67,10 +67,10 @@
       const statusIndex = toDoListStore.index("statusIndex");
 
       // Adds data to our objectStore
-      toDoListStore.add({ listID: "1", status: "complete" });
-      toDoListStore.add({ listID: "2", status: "in-progress" });
-      toDoListStore.add({ listID: "3", status: "complete" });
-      toDoListStore.add({ listID: "4", status: "backlog" });
+      // toDoListStore.add({ listID: "1", status: "complete" });
+      // toDoListStore.add({ listID: "2", status: "in-progress" });
+      // toDoListStore.add({ listID: "3", status: "complete" });
+      // toDoListStore.add({ listID: "4", status: "backlog" });
      
       // Return an item by keyPath
       const getRequest = toDoListStore.get("1");
