service worker added

--- a/public/index.html
+++ b/public/index.html
@@ -86,6 +86,15 @@
     };
 
   </script>
+  <script>
+    if ("serviceWorker" in navigator) {
+      window.addEventListener("load", () => {
+        navigator.serviceWorker.register("service-worker.js").then(reg => {
+          console.log("We found your service worker file!", reg);
+        });
+      });
+    }
+  </script>
   
 </body>
 </html>
